Database infrastrcture implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+# Environment files
+.env
 .env.*
 !.env.example
+
+# Terraform
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/*.tfvars
+!terraform/terraform.tfvars.example
